<resources>
    <string name="app_name">E-Shoe - Nâng niu đôi chân việt</string>
    <string name="intro_title">Biến \nƯớc Mơ \nCủa Bạn \nThành Hiện Thực \nTại Đây</string>
    <string name="go">GO</string>
    <string name="searchHintText">Bạn muốn tìm kiếm điều gì</string>
    <string name="recommendation">Sản phẩm</string>
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="wishlist">Danh sách yêu thích</string>
    <string name="user">Người dùng</string>
    <string name="price">$0</string>
    <string name="rating">5</string>
    <string name="title">Tên sản phẩm</string>
    <string name="increaseNumber">+</string>
    <string name="decreaseNumber">-</string>
    <string name="quantity">1</string>
    <string name="select_color">Chọn màu sắc</string>
    <string name="total_price">Tổng giá tiền</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="select_size">Chọn kích thước</string>
    <string name="loading">Đang tải</string>
    <string name="add_to_wishlist">Thêm vào danh sách yêu thích</string>
    <string name="star_rating">Đánh giá sản phẩm</string>
    <string name="text_size">0</string>
    <string name="your_cart_is_empty">Giỏ hàng đang trống</string>
    <string name="order_detail">Chi tiết hoá đơn</string>
    <string name="checkout">Thanh toán</string>
    <string name="subtotal">Tổng</string>
    <string name="free_delivery">Miễn phí vận chuyển</string>
    <string name="total_tax">Tổng thuế</string>
    <string name="total">Tổng cộng</string>
    <string name="money">$-</string>
    <string name="welcome">Xin chào quý khách</string>
    <string name="full_name_user" />
    <string name="see_all">Toàn bộ</string>
    <string name="description">Mô tả</string>
    <string name="paging_value">1</string>
</resources>