<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/grey_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoes" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fee_each_item_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fee_each_item_txt" />

    <TextView
        android:id="@+id/plusCartBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:text="@string/increaseNumber"
        android:gravity="center"
        android:background="@drawable/blue_bg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minusCartBtn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:text="@string/decreaseNumber"
        android:gravity="center"
        android:background="@drawable/grey_full_corner"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/numberItemTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/minusCartBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/plusCartBtn"
        app:layout_constraintTop_toBottomOf="@id/plusCartBtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>